# mtmpdf

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
pdf_reader/: CSVExporter.cpp  CustomState2.cpp  CustomState2.h  CustomTextState.cpp  CustomTextState.h  ExcelExporter.cpp  ExcelExporter.h  ExcelExporter1.cpp  ExcelExporter1.h  PdfCIDToGIDMap.cpp  PdfCIDToGIDMap.h  PdfCatalog.cpp  PdfCatalog.h  PdfDictionary.cpp  PdfDictionary.h  PdfDocument.cpp  PdfDocument.h  PdfFont.cpp  PdfFont.h  PdfFontDescriptor.cpp  PdfFontDescriptor.h  PdfObject.cpp  PdfObject.h  PdfObjectStream.cpp  PdfObjectStream.h  PdfPage.cpp  PdfPage.h  PdfPages.cpp  PdfPages.h  PdfString.cpp  PdfString.h  (+24 more)
src/: CMakeLists.txt  CSVExporter.cpp  CSVExporter.h  CustomState2.cpp  CustomState2.h  CustomTextState.cpp  CustomTextState.h  DumpContents.cpp  DumpContents.h  DumpText.cpp  DumpText.h  DumpUnzippedPdf.cpp  DumpUnzippedPdf.h  ExcelExporter.cpp  ExcelExporter1.cpp  ExcelExporter1.h  PdfToExcel.cpp  PdfToExcel.h  ScrapePart1.cpp  main.cpp
src/parser/: CMakeLists.txt
src/parser/pdf/: CMakeLists.txt  Command.h  CommandArgs.cpp  CommandArgs.h  CommandState.cpp  CommandState.h  ContentParser.cpp  ContentParser.h  Helpers.cpp  Helpers.h
src/pdf/: CMakeLists.txt  pdf.cpp  pdf.h
src/pdf/objects/: CMakeLists.txt  PdfCIDToGIDMap.cpp  PdfCIDToGIDMap.h  PdfCatalog.cpp  PdfCatalog.h  PdfDictionary.cpp  PdfDictionary.h  PdfDocument.cpp  PdfDocument.h  PdfFont.cpp  PdfFont.h  PdfFontDescriptor.cpp  PdfFontDescriptor.h  PdfObject.cpp  PdfObject.h  PdfObjectStream.cpp  PdfObjectStream.h  PdfPage.cpp  PdfPage.h  PdfPages.cpp  PdfPages.h  PdfString.cpp  PdfString.h  PdfXRef.cpp  PdfXRef.h
src/pdf/types/: CMakeLists.txt  ClippingPath.cpp  ClippingPath.h  GraphicsState.cpp  GraphicsState.h  Line.h  Matrix.cpp  Matrix.h  MultiColor.cpp  MultiColor.h  PathState.cpp  PathState.h  PdfColumn.cpp  PdfColumn.h  PdfPoint.cpp  PdfPoint.h  PdfRect.cpp  PdfRect.h  TextAtLocation.cpp  TextAtLocation.h  TextState.cpp  TextState.h
src/pdf/utils/: CMakeLists.txt  ToUnicode.cpp  ToUnicode.h  TrueTypeFont.cpp  TrueTypeFont.h  tools.cpp  tools.h  zlib_helper.cpp  zlib_helper.h
src/processor/: CMakeLists.txt
src/processor/pdf/: CMakeLists.txt  Processor.cpp  Processor.h
src/processor/pdf/types/: CMakeLists.txt  PageState.cpp  PageState.h  TextAtLocation.h
src/processor/types/: CMakeLists.txt  Line.h
(+2 files in other folders)
